--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:label="U feel"
+        android:label="Skyline"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
 
